--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
                 <div class="flex flex-col items-center gap-4 text-center">
                   <div class="relative w-48 h-48">
                     <div class="w-full h-full rounded-full bg-center bg-no-repeat bg-cover shadow-lg"
-                      style='background-image: url("niyam1.jpg");'>
+                      style='background-image: url("niyam11.HEIC");'>
                     </div>
                   </div>
                   <div>
@@ -186,6 +186,7 @@
 
 
 </html>
+
 
 
 
