--- a/profile.html
+++ b/profile.html
@@ -17,7 +17,7 @@
 
   <!-- Top Bar -->
   <header class="w-full flex items-center justify-between p-4 bg-white shadow">
-    <button class="text-gray-600 text-xl">←</button>
+   <a href="index.html"> <button class="text-gray-600 text-xl">←</button></a>
     <h1 class="text-lg font-semibold">Profile</h1>
     <div class="w-6"></div>
   </header>
@@ -38,10 +38,11 @@
 
   <!-- Bottom Nav -->
   <footer class="w-full bg-white shadow-inner flex justify-around py-3">
-    <button class="flex flex-col items-center text-blue-500">
+  <a href="index.html>  <button class="flex flex-col items-center text-blue-500">
       <span class="material-icons">home</span>
       <span class="text-xs">Home</span>
     </button>
+  </a>
     <button class="flex flex-col items-center text-gray-500">
       <span class="material-icons">person</span>
       <span class="text-xs">Profile</span>
@@ -130,3 +131,4 @@
   </script>
 </body>
 </html>
+
