--- a/profile.html
+++ b/profile.html
@@ -38,7 +38,7 @@
 
   <!-- Bottom Nav -->
   <footer class="w-full bg-white shadow-inner flex justify-around py-3">
-  <a href="index.html>  <button class="flex flex-col items-center text-blue-500">
+  <a href="index.html">  <button class="flex flex-col items-center text-blue-500">
       <span class="material-icons">home</span>
       <span class="text-xs">Home</span>
     </button>
@@ -131,4 +131,5 @@
   </script>
 </body>
 </html>
+
 
