--- a/leaderboard.html
+++ b/leaderboard.html
@@ -1,4 +1,4 @@
-\\<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -21,7 +21,7 @@
         <div class="leaderboard-item first">
           <div class="player">
             <span class="medal">🥇</span>
-            <span class="name">Alice</span>
+            <span class="name">Bhavya</span>
           </div>
           <span class="score">1200 pts</span>
         </div>
@@ -29,7 +29,7 @@
         <div class="leaderboard-item second">
           <div class="player">
             <span class="medal">🥈</span>
-            <span class="name">Bob</span>
+            <span class="name">Nandini</span>
           </div>
           <span class="score">1100 pts</span>
         </div>
@@ -37,7 +37,7 @@
         <div class="leaderboard-item third">
           <div class="player">
             <span class="medal">🥉</span>
-            <span class="name">Charlie</span>
+            <span class="name">Niyam</span>
           </div>
           <span class="score">950 pts</span>
         </div>
@@ -45,7 +45,7 @@
         <div class="leaderboard-item other">
           <div class="player">
             <span class="badge">4</span>
-            <span class="name">David</span>
+            <span class="name">Janvi</span>
           </div>
           <span class="score">850 pts</span>
         </div>
@@ -53,7 +53,7 @@
         <div class="leaderboard-item other">
           <div class="player">
             <span class="badge">5</span>
-            <span class="name">Eva</span>
+            <span class="name">Aarav</span>
           </div>
           <span class="score">780 pts</span>
         </div>
@@ -61,7 +61,7 @@
         <div class="leaderboard-item other">
           <div class="player">
             <span class="badge">6</span>
-            <span class="name">Frank</span>
+            <span class="name">Manav</span>
           </div>
           <span class="score">720 pts</span>
         </div>
@@ -69,7 +69,7 @@
         <div class="leaderboard-item other">
           <div class="player">
             <span class="badge">7</span>
-            <span class="name">Grace</span>
+            <span class="name">Ram</span>
           </div>
           <span class="score">690 pts</span>
         </div>
@@ -77,7 +77,7 @@
         <div class="leaderboard-item other">
           <div class="player">
             <span class="badge">8</span>
-            <span class="name">Henry</span>
+            <span class="name">Shayam</span>
           </div>
           <span class="score">650 pts</span>
         </div>
@@ -85,7 +85,7 @@
         <div class="leaderboard-item other">
           <div class="player">
             <span class="badge">9</span>
-            <span class="name">Ivy</span>
+            <span class="name">sonu</span>
           </div>
           <span class="score">620 pts</span>
         </div>
@@ -93,7 +93,7 @@
         <div class="leaderboard-item other">
           <div class="player">
             <span class="badge">10</span>
-            <span class="name">Jack</span>
+            <span class="name">Monu</span>
           </div>
           <span class="score">590 pts</span>
         </div>
@@ -106,5 +106,6 @@
     <script src="theme.js"></script>
   </body>
 </html>
+
 
 
