--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="group">
         <!-- Navigation -->
         <nav class="navigation" id="navMenu">
-          <a href="home.html">Home</a>
+          <a href="index.html">Home</a>
           <a href="signup.html">Signup</a>
           <a href="about.html">About</a>
         </nav>
@@ -283,3 +283,4 @@
     </script>
   </body>
 </html>
+
