--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <!-- Brand: Logo + Text -->
       <div class="brand">
         <img
-          src="logo-modified-removebg-preview.png"
+          src="logo.jpg"
           alt="Greenify Logo"
           class="logo"
         />
@@ -283,4 +283,5 @@
     </script>
   </body>
 </html>
+
 
