--- a/module3.html
+++ b/module3.html
@@ -26,14 +26,14 @@
             <header
                 class="flex items-center justify-between whitespace-nowrap border-b border-solid border-b-[#e0e7e0] px-10 py-4">
                 <div class="flex items-center gap-3 text-[#111811]">
-                    <img src="logo-modified.png" alt="Greenify Logo" class="h-10 w-10 rounded-lg" />
+                    <img src="images/logo-modified.png" alt="Greenify Logo" class="h-10 w-10 rounded-lg" />
                     <h2 class="text-[#111811] text-xl font-bold leading-tight tracking-[-0.015em]">Greenify</h2>
                 </div>
 
                 <!-- 👇 This nav is hidden on mobile, shown only on md+ -->
                 <div class="hidden md:flex flex-1 justify-center gap-12 text-[#374137]">
                     <a class="text-base font-medium leading-normal hover:text-[var(--primary-color)] transition-colors"
-                        href="homepage2.html"> Home</a>
+                        href="homepage.html"> Home</a>
                     <a class="text-base font-medium leading-normal text-[var(--primary-color)]" href="#">Modules</a>
                 </div>
                 <!-- Back Button -->
@@ -67,7 +67,7 @@
 
             <!-- Mobile Menu -->
             <div id="mobile-menu" class="hidden md:hidden flex-col bg-white border-b border-[#e0e7e0] px-6 py-4">
-                <a href="homepage2.html"
+                <a href="homepage.html"
                     class="block py-2 text-[#374137] font-medium hover:text-[var(--primary-color)]">Home</a>
                 <a href="#" class="block py-2 text-[var(--primary-color)] font-medium">Modules</a>
             </div>
@@ -81,12 +81,12 @@
                         </div>
                     </div>
 
-                    <a href="Water-Pollution-in-India-A-Crisis-Threatening-Millions (1).pdf">
+                    <a href="pdf/Water-Pollution-in-India-A-Crisis-Threatening-Millions (1).pdf">
                         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 p-4">
                             <div
                                 class="flex flex-col gap-4 rounded-lg bg-white shadow-sm hover:shadow-lg transition-shadow duration-300 overflow-hidden group">
                                 <div class="w-full h-48 bg-center bg-no-repeat bg-cover"
-                                    style='background-image: url("water2.jpeg");'>
+                                    style='background-image: url("images/water2.jpeg");'>
                                 </div>
                                 <div class="p-5 flex flex-col flex-1 gap-2">
                                     <h3 class="text-[#111811] text-lg font-bold">Water Pollution </h3>
@@ -96,11 +96,11 @@
                                 </div>
                             </div>
                     </a>
-                    <a href="Air-Pollution-A-Global-Crisis-with-an-Indian-Epicenter.pdf">
+                    <a href="pdf/Air-Pollution-A-Global-Crisis-with-an-Indian-Epicenter.pdf">
                         <div
                             class="flex flex-col gap-4 rounded-lg bg-white shadow-sm hover:shadow-lg transition-shadow duration-300 overflow-hidden group">
                             <div class="w-full h-48 bg-center bg-no-repeat bg-cover"
-                                style='background-image: url("air pollution.jpg");'>
+                                style='background-image: url("images/air pollution.jpg");'>
                             </div>
                             <div class="p-5 flex flex-col flex-1 gap-2">
                                 <h3 class="text-[#111811] text-lg font-bold">Air Pollution</h3>
@@ -109,11 +109,11 @@
                             </div>
                         </div>
                     </a>
-                    <a href="Climate-Change-Global-Crisis-and-Indias-Challenge.pdf">
+                    <a href="pdf/Climate-Change-Global-Crisis-and-Indias-Challenge.pdf">
                         <div
                             class="flex flex-col gap-4 rounded-lg bg-white shadow-sm hover:shadow-lg transition-shadow duration-300 overflow-hidden group">
                             <div class="w-full h-48 bg-center bg-no-repeat bg-cover"
-                                style='background-image: url("climate.jpeg");'>
+                                style='background-image: url("images/climate.jpeg");'>
                             </div>
                             <div class="p-5 flex flex-col flex-1 gap-2">
                                 <h3 class="text-[#111811] text-lg font-bold">Climate Change</h3>
@@ -123,11 +123,11 @@
                             </div>
                         </div>
                     </a>
-                    <a href="The-Global-Impact-of-Cutting-Trees-Why-India-Matters (1).pdf">
+                    <a href="pdf/The-Global-Impact-of-Cutting-Trees-Why-India-Matters (1).pdf">
                         <div
                             class="flex flex-col gap-4 rounded-lg bg-white shadow-sm hover:shadow-lg transition-shadow duration-300 overflow-hidden group">
                             <div class="w-full h-48 bg-center bg-no-repeat bg-cover"
-                                style='background-image: url("deforest.jpg");'>
+                                style='background-image: url("images/deforest.jpg");'>
                             </div>
                             <div class="p-5 flex flex-col flex-1 gap-2">
                                 <h3 class="text-[#111811] text-lg font-bold">Deforestation</h3>
@@ -136,11 +136,11 @@
                             </div>
                         </div>
                     </a>
-                    <a href="Understanding-the-3-Main-Types-of-Dustbins-in-India.pdf">
+                    <a href="pdf/Understanding-the-3-Main-Types-of-Dustbins-in-India.pdf">
                         <div
                             class="flex flex-col gap-4 rounded-lg bg-white shadow-sm hover:shadow-lg transition-shadow duration-300 overflow-hidden group">
                             <div class="w-full h-48 bg-center bg-no-repeat bg-cover"
-                                style='background-image: url("waste2.jpeg");'>
+                                style='background-image: url("images/waste2.jpeg");'>
                             </div>
                             <div class="p-5 flex flex-col flex-1 gap-2">
                                 <h3 class="text-[#111811] text-lg font-bold">Waste Management</h3>
@@ -179,3 +179,4 @@
 </body>
 
 </html>
+
